--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>マテリアル説明</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
   <nav>
     <ul>
       <li class="active"><a href="index.html">マテリアル説明</a></li>
-      <li><a href="getting-started.html">導入方法</a></li>
-      <li><a href="history.html">更新履歴</a></li>
+      <li><a href="">導入方法</a></li>
+      <li><a href="">更新履歴</a></li>
     </ul>
   </nav>
     <h2>マテリアルフォルダの構造と簡単な説明</h2>
