:memo: Add New Page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <nav>
     <ul>
       <li class="active"><a href="index.html">マテリアル説明</a></li>
-      <li><a href="">導入方法</a></li>
+      <li><a href="getting-started.html">商品説明/導入方法</a></li>
       <li><a href="">更新履歴</a></li>
     </ul>
   </nav>
