--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,6 @@
-/* 全体のスタイル */
+/* ------------------------
+◆ body
+---------------------------*/
 body {
     font-family: 'Helvetica Neue', sans-serif;
     background-color: #fff;
@@ -6,9 +8,16 @@ body {
     margin: 0;
     padding: 0;
 }
-  /* ------------------------
-  ◆ header
-  ---------------------------*/
+
+/* ------------------------
+◆ main
+---------------------------*/
+main{
+    margin: 50px;
+}
+/* ------------------------
+◆ header
+---------------------------*/
 nav {
     text-align: center;
     background-color: #333;
