--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% include doc_nav.html %}
   </nav>
   <main>
-    <h2>マテリアルフォルダの構造と簡単な説明</h2>
+    <h2>{{ page.title }}</h2>
     <div id="content">
         {{ content }}
     </div>
