--- a/_includes/doc_nav.html
+++ b/_includes/doc_nav.html
@@ -1,6 +1,6 @@
 <ul>
     <li class="{% if page.url == '/' %}active{% endif %}">
-        <a href="{{ "/index.html" | relative_url }}">マテリアル説明</a>
+        <a href="{{ "/index.html" | relative_url }}">ディレクトリ構造/マテリアル説明</a>
     </li>
     <li class="{% if page.url == '/getting-started.html' %}active{% endif %}">
         <a href="{{ "/getting-started.html" | relative_url }}">商品の説明/導入方法</a>
